--- a/污染物迁移数学建模.ipynb
+++ b/污染物迁移数学建模.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Air_Qualities_of_Aotizhongxin = Air_Qualities['stationId' == 'Aotizhongxin'].copy()\n",
+    "Air_Qualities_of_Aotizhongxin = Air_Qualities[0].copy()\n",
     "Air_Qualities_of_Aotizhongxin.dropna(axis=0, how='any', inplace=True)"
    ]
   },
